# lssp

./: Makefile.in  Makefile.inc.in  README.md  configure  configure.ac  configure.in
doc/: Makefile  install.tex  intro.tex  lssp.tex  mv.tex  solver.tex  utils.tex
example/: Makefile  exam.cxx
include/: config.h.in  lssp.h  matrix-utils.h  mvops.h  pc-amg.h  pc-arms.h  pc-biluk.h  pc-bilut.h  pc-iluk.h  pc-ilut.h  pc-mi20.h  pc-sxamg.h  pc-vbiluk.h  pc-vbilut.h  pc.h  solver-amg.h  solver-bicgsafe.h  solver-bicgstab.h  solver-bicgstabl.h  solver-bicrsafe.h  solver-bicrstab.h  solver-cg.h  solver-cgs.h  solver-cr.h  solver-crs.h  solver-fasp.h  solver-gmres.h  solver-gpbicg.h  solver-gpbicr.h  solver-idrs.h  solver-klu.h  solver-laspack.h  solver-lgmres.h  solver-lis.h  solver-mi20.h  solver-mumps.h  solver-orthomin.h  solver-pardiso.h  solver-petsc.h  solver-qmrcgstab.h  (+9 more)
src/: Makefile  Makefile.dep  lssp.cxx  matrix-utils.cxx  mvops.cxx  pc-amg.cxx  pc-arms.cxx  pc-biluk.cxx  pc-bilut.cxx  pc-iluk.cxx  pc-ilut.cxx  pc-mi20.cxx  pc-sxamg.cxx  pc-vbiluk.cxx  pc-vbilut.cxx  pc.cxx  solver-amg.cxx  solver-bicgsafe.cxx  solver-bicgstab.cxx  solver-bicgstabl.cxx  solver-bicrsafe.cxx  solver-bicrstab.cxx  solver-cg.cxx  solver-cgs.cxx  solver-cr.cxx  solver-crs.cxx  solver-fasp.cxx  solver-gmres.cxx  solver-gpbicg.cxx  solver-gpbicr.cxx  solver-idrs.cxx  solver-klu.cxx  solver-laspack.cxx  solver-lgmres.cxx  solver-lis.cxx  solver-mi20.cxx  solver-mumps.cxx  solver-orthomin.cxx  solver-pardiso.cxx  solver-petsc.cxx  (+9 more)
